# tools

./: .gitignore  LICENSE  README.md
.github/: super-linter.env
.github/workflows/: test.yml
cprofile-visualization/: visualization.py
cprofile-visualization/data/: report.profile
py-generate-kusto-url/: main.py
py-kql2url/: README.md  kql2url.py  pyproject.toml
py-kql2url/data/: test.kql
py-kql2url/kql2url/: __init__.py  __main__.py  kql2url.py
pyregex-utils/: .coveragerc  README.md  pyproject.toml  regexutils.py
pyregex-utils/src/: regexutils.py
pyregex-utils/tests/: test_regexutils.py
pytimeit/: README.md
pytimeit/regex-replace/: README.md
to-utf8/: to-utf8.sh
web2pdf/: .gitignore  package-lock.json  package.json
web2pdf/src/: html2pdf.js  web2pdf.js
zip-utils/: README.md  pyproject.toml
zip-utils/src/: __init__.py  cli.py  zipdiff.py  zipwalk.py
zip-utils/tests/: conftest.py  test_cli.py  test_zipdiff.py  test_zipwalk.py
